--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Ibrahim's Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./images/heart.png">
     <!-- linking css file -->
     <link rel="stylesheet" href="style.css">
 
@@ -27,9 +28,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
@@ -119,33 +117,11 @@
                             <h4 class="card-title">Apple Clone</h4>
                             <p class="card-text">Tech Stack: HTML, CSS</p>
                             <div class="text-center">
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
-                                    Link
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Sorry for the
-                                                    inconvenience</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                The project you're looking for will be available soon.
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <a href="https://stupefied-einstein-ecae12.netlify.app/">
+                                    <button type="button" class="btn btn-success">
+                                        Link
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -198,33 +174,11 @@
                             <h4 class="card-title">AirBnB News Clone</h4>
                             <p class="card-text">Tech Stack: HTML, CSS, Bootstrap 4</p>
                             <div class="text-center">
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
-                                    Link
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Sorry for the
-                                                    inconvenience</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                The project you're looking for will be available soon.
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <a href="https://kind-bell-30da35.netlify.app/">
+                                    <button type="button" class="btn btn-success">
+                                        Link
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -250,7 +204,7 @@
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form>
-                        <input type="text" class="form-control form-control-lg" placeholder="Name">
+                        <input type="text" class="form-control mt-3" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
@@ -269,9 +223,10 @@
         <div class="container-fluid">
             <!-- social media icons -->
             <div class="social-icons mt-4">
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/ibrahimsinanca/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ibrahim-sinan-70983a1b9/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/ibrahimsinan" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
