newsweek project link added

--- a/index.html
+++ b/index.html
@@ -135,33 +135,11 @@
                             <h4 class="card-title">Newsweek Clone</h4>
                             <p class="card-text">Tech Stack: HTML, CSS, Bootstrap 4</p>
                             <div class="text-center">
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
-                                    Link
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Sorry for the
-                                                    inconvenience</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                The project you're looking for will be available soon.
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <a href="https://optimistic-kare-c25c5e.netlify.app/">
+                                    <button type="button" class="btn btn-success">
+                                        Link
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
