image alt info added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/appleCloneImage.png" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/appleCloneImage.png" alt="Apple website image"
+                            style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Apple Clone</h4>
                             <p class="card-text">Tech Stack: HTML, CSS</p>
@@ -129,7 +130,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/newsweekCloneImage.png" alt="Card image"
+                        <img class="card-img-top" src="images/newsweekCloneImage.png" alt="Newsweek website image"
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Newsweek Clone</h4>
@@ -147,7 +148,8 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/airbnbCloneImage.png" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/airbnbCloneImage.png" alt="AirBnb website image"
+                            style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">AirBnB News Clone</h4>
                             <p class="card-text">Tech Stack: HTML, CSS, Bootstrap 4</p>
